# ThreadPool

./: .gitignore  CMakeLists.txt  ConcurrentResource.cppm  ITask.hpp  README.md  Task.hpp  ThreadPool-ETaskState.cppm  ThreadPool-ITask.cppm  ThreadPool-ITaskUniquePtrPriorityComparator.cppm  ThreadPool-Task.cppm  ThreadPool-TaskCanceled.cppm  ThreadPool-TaskID.cppm  ThreadPool-TaskPriority.cppm  ThreadPool-TaskTicket.cppm  ThreadPool.cpp  ThreadPool.cppm  ThreadPool.hpp  main.cpp
